<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ensiie.adgerodashboard.Activities.MainActivity"
    android:orientation="vertical"
    android:weightSum="3">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/energyStatusTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/energy_status"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:fontFamily="sans-serif-medium"/>

            <ImageView
                android:id="@+id/statusImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignBottom="@id/energyStatusTitle"
                android:layout_alignTop="@id/energyStatusTitle"
                android:layout_alignParentEnd="true"
                android:src="@drawable/status_ok"
                android:adjustViewBounds="true"/>

            <TextView
                android:id="@+id/appStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:layout_alignBottom="@id/energyStatusTitle"
                android:layout_alignTop="@id/energyStatusTitle"
                android:layout_toLeftOf="@id/statusImage"
                android:layout_toStartOf="@id/statusImage"
                android:gravity="center"/>

            <com.triggertrap.seekarc.SeekArc
                android:id="@+id/seekArcStorage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/energyStatusTitle"
                android:padding="35dp"
                android:background="@color/transparent"
                app:rotation="0"
                app:progressColor="@color/colorStorage"
                app:arcColor="@color/gaugeBackground"
                app:max="100"
                app:arcWidth="32dp"
                app:progressWidth="32dp"
                app:clockwise="true"
                app:startAngle="0"
                app:sweepAngle="125"
                app:touchInside="false"
                app:enabled="false"/>

            <com.triggertrap.seekarc.SeekArc
                android:id="@+id/seekArcDelivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/energyStatusTitle"
                android:padding="35dp"
                android:background="@color/transparent"
                app:rotation="0"
                app:progressColor="@color/colorDelivery"
                app:arcColor="@color/gaugeBackground"
                app:clockwise="false"
                app:startAngle="0"
                app:sweepAngle="125"
                app:arcWidth="32dp"
                app:progressWidth="32dp"
                app:max="100"
                app:touchInside="false"
                app:enabled="false"/>

            <TextView
                android:id="@+id/energyStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:fontFamily="sans-serif"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/energyValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:textSize="56sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/number_placeholder"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardBattery"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_weight="2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/batteryPercentageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/battery_percentage"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:fontFamily="sans-serif-medium"/>

            <ImageView
                android:id="@+id/batteryOutline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/batteryPercentageTitle"
                android:src="@drawable/progress_battery"
                android:adjustViewBounds="true"
                android:tint="@color/batteryRed"/>

            <TextView
                android:id="@+id/batteryValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/batteryOutline"
                android:layout_alignTop="@id/batteryOutline"
                android:layout_alignLeft="@id/batteryOutline"
                android:layout_alignRight="@id/batteryOutline"
                android:layout_alignStart="@id/batteryOutline"
                android:layout_alignEnd="@id/batteryOutline"
                android:gravity="center"
                android:textSize="56sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/number_placeholder"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabBrake"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                app:backgroundTint="@color/colorDelivery"
                android:layout_marginBottom="4dp"
                android:src="@drawable/ic_trending_down_white_24dp"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabAccelerate"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_above="@id/fabBrake"
                android:layout_marginBottom="4dp"
                app:backgroundTint="@color/colorStorage"
                android:src="@drawable/ic_trending_up_white_24dp"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
